# embarcados-dashboard

./: .gitignore  Dockerfile  Dockerfile-streamlit  README.md  docker-compose.yml  go.mod  pyproject.toml  requirements.txt
app/cmd/api/: main.go
app/dashboard/: embedded_system.py  utils.py
app/internal/db/: postgres.go
app/internal/domain/: temperature.go
app/internal/handler/: temperature.go
app/internal/repository/: temperature.go
app/internal/usecase/: temperature.go
esp32/src/: main.ino
src/cmd/api/: main.go
src/internal/domain/: temperature.go
src/internal/handler/: temperature.go
src/internal/repository/: temperature.go
src/internal/usecase/: temperature.go
